--- a/app/src/main/res/layout/f_cobranza.xml
+++ b/app/src/main/res/layout/f_cobranza.xml
@@ -42,7 +42,7 @@
             android:layout_marginRight="15dp"
             android:layout_alignParentBottom="true"
             app:backgroundTint="@color/colorPrint"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <android.support.design.widget.FloatingActionButton
             xmlns:app="http://schemas.android.com/apk/res-auto"
